# Pypin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.example.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: DCPP-RFC-Wire-Protocol.md  E2E_TEST_EVALUATION.md  architecture.md  contributing.md  getting-started.md  index.md  libp2p-noise-interop-issue.md  mermaid-init.js
docs/AIContext/: PACKAGE_PLAN.md
docs/api/: core.md  messages.md  network.md  node.md  storage.md
examples/: collection_guardian.py  custom_storage.py  health_probing.py  hello_node.py  manifest_creation.py
scripts/: get-rust-peer-id.sh  noise_handshake_diag.py  prometheus.yml
src/dcpp_python/: __init__.py  bittorrent.py  bittorrent_real.py  bootstrap_discovery.py  cid_verify.py  client.py  crypto.py  daemon.py  dht.py  dht_real.py  e2e_tests.py  framing.py  libp2p_host.py  libp2p_real.py  load_tests.py  manifest.py  manifest_verify.py  messages.py  peer_id.py  platform_tests.py  security_audit.py  state_machine.py  uci.py  utils.py  validation.py
src/dcpp_python/core/: __init__.py  framing.py  messages.py  uci.py  utils.py  validation.py
src/dcpp_python/core/constants/: __init__.py  enums.py  helpers.py  protocol.py
src/dcpp_python/crypto/: __init__.py  cid.py  peer_id.py  signing.py
src/dcpp_python/manifest/: __init__.py  manifest.py  verify.py
src/dcpp_python/network/: __init__.py  interfaces.py
src/dcpp_python/network/bittorrent/: __init__.py  base.py  real.py
src/dcpp_python/network/dht/: __init__.py  base.py  bootstrap_discovery.py  interfaces.py  kademlia.py
src/dcpp_python/network/libp2p/: __init__.py  real.py  simulated.py
src/dcpp_python/node/: __init__.py  client.py  daemon.py
src/dcpp_python/state/: __init__.py  machine.py
src/dcpp_python/storage/: __init__.py  base.py  filesystem.py  genesis.py  interfaces.py  memory.py
tests/: Dockerfile.python  __init__.py  conftest.py
tests/benchmarks/: test_framing_benchmark.py
tests/e2e/: test_complete_message_flow.py  test_interop.py  test_real_e2e.py  test_request_response_correlation.py  test_uci_interop.py
tests/fixtures/: test_vectors.json
tests/integration/: test_bittorrent_compliance.py  test_bittorrent_real.py  test_bootstrap_discovery.py  test_client_module.py  test_cross_network_bootstrap.py  test_daemon.py  test_dht_compliance.py  test_dht_module.py  test_dht_real.py  test_integration.py  test_libp2p_real.py  test_rfc_compliance.py
tests/unit/core/: test_coverage_extras.py  test_framing.py  test_framing_fuzz.py  test_framing_property.py  test_manifest.py  test_messages.py  test_utils.py  test_validation.py
tests/unit/crypto/: test_cid_verify.py  test_crypto.py  test_signing.py
tests/unit/e2e/: test_real_e2e_setup.py
tests/unit/network/: test_noise_patch.py
tests/unit/state/: test_state_machine_happy_path.py
tests/unit/storage/: test_storage_security.py
